--- a/src/app/layouts/app-layout/app-layout.component.html
+++ b/src/app/layouts/app-layout/app-layout.component.html
@@ -1,6 +1,5 @@
 <div class="flex flex-col gap-y-8 bg-gray-50 font-sans">
-  <!-- <app-home></app-home> -->
-  <!-- <app-login></app-login> -->
-
+  <app-navbar></app-navbar>
+  <ng-content></ng-content>
 </div>
 <router-outlet></router-outlet>
